# Rust

./: 1-theory  README.md
2-types/: README.md
2-types/part_1-2/: README.md
2-types/part_1-2/2-types/part_1-2/: Cargo.toml  main.rs
2-types/part_1-2/2-types/part_1-2/src/: main.rs  part_1.rs  part_2.rs
3-polymorphism/: README.md  snippets-app
3-polymorphism/snippets-app/: Cargo.toml
3-polymorphism/snippets-app/src/: main.rs
3-polymorphism/src/: main.rs
4-errors/: README.md
4-errors/snippets-app/: Cargo.toml
4-errors/snippets-app/src/: main.rs
5-conf_log/: Cargo.toml  README.md  config.tom
5-conf_log/src/: main.rs
5-conf_log/src/snippets-app/: Cargo.toml
5-conf_log/src/snippets-app/src/: main.rs
6-tests/: Cargo.toml  README.md
6-tests/src/: lib.rs  main.rs
7-fmt_lints_docs/: Cargo.toml  README.md
7-fmt_lints_docs/src/: lib.rs  main.rs
8-macro/: Cargo.toml  README.md
8-macro/src/: lib.rs  main.rs
