[package]
name = "part_1-2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde", "clock"] }
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
